objects/L2I_Compliance_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>L2I_AnswerText__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2I_AuthorList__c</fullName>
        <label>Authors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Compliant__c</fullName>
        <label>Compliant</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Header_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2I_MIR_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MIR Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_QuestionText__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2I_RFPIO_Project_ID__c</fullName>
        <label>RFPIO Project ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_ReviewerList__c</fullName>
        <label>Reviewers List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2I_RiskRequirement_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Risk Requirement Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P_L_Approval__c</fullName>
        <label>P&amp;L Approval</label>
        <referenceTo>L2I_P_L_Approval__c</referenceTo>
        <relationshipLabel>Compliance Matrix</relationshipLabel>
        <relationshipName>Compliance_Matrix</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Compliance Matrix</label>
    <nameField>
        <displayFormat>CMP-{0000}</displayFormat>
        <label>Compliance Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Matrix</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>